<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/black"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_list"
        android:title="@string/transactions" />
    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/ic_chart"
        android:title="@string/budget" />
    <item
        android:id="@+id/navigation_goals"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_target"
        android:title="@string/goals" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />
</menu>