<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/categoryNameInput"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="Category Name"
        android:background="@color/card_background"
        android:hint="@string/category_name"
        android:inputType="textCapWords"
        android:padding="12dp"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_icon_colour"
        android:textSize="14sp"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorSwatchGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:paddingBottom="8dp" />

    <Button
        android:id="@+id/createCategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#FF9800"
        android:elevation="4dp"
        android:text="@string/create_category"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />



</LinearLayout>